# fastapi_MADR_redis

./: .env  Dockerfile  README.md  compose.yml  database.db  entrypoint.sh  env.txt  pyproject.toml  worker.sh  worker_livro.py  worker_romancista.py
madr/: app.py  database.py  database_redis.py  models.py  schemas.py  security.py  settings.py  utils.py
madr/routers/: auth.py  livros.py  romancista.py  users.py
migrations/versions/: 352f8259a65b_create_table_romancista_and_livro.py  7c572f97feb6_create_table_users.py
tests/: conftest.py  test_auth.py  test_livro.py  test_model.py  test_romancista.py  test_security.py  test_users.py
